<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<name>Gemma</name>
	<groupId>gemma</groupId>
	<artifactId>gemma</artifactId>
	<version>1.8-SNAPSHOT</version>
	<inceptionYear>2005</inceptionYear>
	<description>
		The Gemma Project for meta-analysis of genomics data
	</description>
	<url>http://www.chibi.ubc.ca/Gemma</url>
	<organization>
		<name>UBC Centre for High-throughput Biology</name>
		<url>http://www.chibi.ubc.ca/</url>
	</organization>
	<modules>

		<module>gemma-mda</module>
		<module>gemma-core</module>
		<module>gemma-web</module>
		<module>gemma-model</module>
	</modules>
	<packaging>pom</packaging>
	<scm>
		<connection>scm:cvs:ext:@otto.pavlab.chibi.ubc.ca:/cvs:Gemma</connection>
		<developerConnection>scm:cvs:ext:@otto.pavlab.chibi.ubc.ca:/cvs:Gemma</developerConnection>
		<url>http://www.chibi.ubc.ca/faculty/pavlidis/fisheye/browse/pavlab/Gemma</url>
		<tag>gemma-1_7</tag>
	</scm>
	<issueManagement>
		<system>Bugzilla</system>
		<url>
			http://chibi.ubc.ca/faculty/pavlidis/lab/bugs/buglist.cgi?product=Gemma&amp;bug_status=__open__
		</url>
	</issueManagement>
	<ciManagement>
		<system>bamboo</system>
		<url>http://chibi.ubc.ca/faculty/pavlidis/bamboo</url>
	</ciManagement>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Paul Pavlidis</name>
			<id>paul</id>
			<email>paul@chibi.ubc.ca</email>
			<organization>University of British Columbia</organization>
		</developer>
		<developer>
			<name>Anton Zoubarev</name>
			<id>azoubarev</id>
			<organization>University of British Columbia</organization>
		</developer>
		<developer>
			<name>Cam McDonald</name>
			<id>cam</id>
			<organization>University of British Columbia</organization>
		</developer>
		<developer>
			<name>Patrick Tan</name>
			<id>ptan</id>
			<organization>University of British Columbia</organization>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>Kiran Keshav</name>
		</contributor>
		<contributor>
			<name>Kelsey Hamer</name>
		</contributor>
		<contributor>
			<name>Louise Donnison</name>
		</contributor>
		<contributor>
			<name>Leon French</name>
		</contributor>
		<contributor>
			<name>Vaneet Lotay</name>
		</contributor>
		<contributor>
			<name>Joseph Santos</name>
		</contributor>
		<contributor>
			<name>David Quigley</name>
		</contributor>
		<contributor>
			<name>Anshu Sinha</name>
		</contributor>
		<contributor>
			<name>Suzanne Lane</name>
		</contributor>
		<contributor>
			<name>Meeta Mistry</name>
		</contributor>
		<contributor>
			<name>Xiang Wan</name>
		</contributor>
		<contributor>
			<name>Jesse Gillis</name>
		</contributor>
		<contributor>
			<name>Gavin Ha</name>
		</contributor>
		<contributor>
			<name>Adam Hall</name>
		</contributor>
		<contributor>
			<name>Raymond Lim</name>
		</contributor>
		<contributor>
			<name>Luke McCarthy</name>
		</contributor>
		<contributor>
			<name>Thea Van Rossum</name>
		</contributor>
		<contributor>
			<name>Frances Liu</name>
		</contributor>
	</contributors>
	<dependencies>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-ehcache</artifactId>
			<version>3.6.7.Final</version>
			<exclusions>
				<exclusion>
					<groupId>net.sf.ehcache</groupId>
					<artifactId>ehache-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<!-- required by hibernate, explicitly import so we get it at runtime. -->
			<groupId>javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.4.GA</version>
			<scope>runtime</scope>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache-core</artifactId>
			<version>2.5.2</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache-terracotta</artifactId>
			<version>2.5.2</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.terracotta</groupId>
			<artifactId>terracotta-toolkit-1.5-runtime</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.10</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${spring.version}</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jms</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-core</artifactId>
			<version>5.7.0</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.apache.xbean</groupId>
			<artifactId>xbean-spring</artifactId>
			<version>3.11.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>${spring.security.version}</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${spring.security.version}</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-acl</artifactId>
			<version>${spring.security.version}</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.social</groupId>
			<artifactId>spring-social-core</artifactId>
			<version>1.0.2.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.social</groupId>
			<artifactId>spring-social-twitter</artifactId>
			<version>1.0.2.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>13.0.1</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1.1</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.8.3</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.14</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.6.6</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.6</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.7</version>
			<scope>test</scope>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>3.2</version>
			<scope>test</scope>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib</artifactId>
			<version>2.2.2</version>
		</dependency>
		<dependency>
			<groupId>classmexer</groupId>
			<artifactId>classmexer</artifactId>
			<version>0.03</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.8.1</version>
				<configuration>
					<!-- UseSplitVerifier is so Cobertura works with Java 7 -->
					<argLine>-Xmx1500M -ea -Djava.awt.headless=true -XX:MaxPermSize=512m -XX:-UseSplitVerifier</argLine>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
					<excludes>
						<exclude>**/*Abstract*</exclude>
						<exclude>**/*IntegrationTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<allowTimestampedSnapshots>
						true
					</allowTimestampedSnapshots>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<reportPlugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-project-info-reports-plugin</artifactId>
							<version>2.4</version>
							<reportSets>
								<reportSet>
									<reports>
										<report>index</report>
										<report>dependencies</report>
										<report>license</report>
										<report>scm</report>
										<report>summary</report>
										<report>dependency-convergence</report>
									</reports>
								</reportSet>
							</reportSets>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-javadoc-plugin</artifactId>
							<version>2.8</version>
							<configuration>
								<configuration>
									<quiet>true</quiet>
									<aggregate>false</aggregate>
									<links>
										<link>http://chibi.ubc.ca/faculty/pavlidis/basecode/apidocs/</link>
										<link>http://docs.oracle.com/javase/7/docs/api/</link>
										<link>http://commons.apache.org/proper/commons-dbcp/apidocs/</link>
										<link>http://commons.apache.org/proper/commons-dbcp/apidocs/</link>
										<link>http://commons.apache.org/proper/commons-fileupload/apidocs/</link>
										<link>http://hc.apache.org/httpclient-3.x/apidocs/</link>
										<link>http://commons.apache.org/proper/commons-logging/apidocs/</link>
										<link>http://jakarta.apache.org/commons/pool/apidocs/</link>
										<link>http://dsd.lbl.gov/~hoschek/colt/api/</link>
										<link>http://static.springsource.org/spring/docs/3.0.x/javadoc-api/</link>
										<link>http://docs.jboss.org/hibernate/orm/3.5/api/</link>
									</links>
									<additionalJOptions>
										<additionalJOption>-J-Xmx1.2g</additionalJOption>
										<additionalJOption>-J-XX:MaxPermSize=512m</additionalJOption>
									</additionalJOptions>
								</configuration>
							</configuration>
						</plugin>
						<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-report-plugin</artifactId> <version>2.14.1</version> 
							<configuration> <argLine>-Xmx1.2g -XX:MaxPermSize=512m</argLine> </configuration> </plugin> -->
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>cobertura-maven-plugin</artifactId>
							<version>2.5.2</version>
							<configuration>
								<aggregate>true</aggregate>
								<check>
									<haltOnFailure>false</haltOnFailure>
								</check>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>jdepend-maven-plugin</artifactId>
							<version>2.0-beta-2</version>
						</plugin>
					</reportPlugins>
				</configuration>
			</plugin>
			<plugin>
				<!-- used when running cobertura outside of the 'site' plugin call. -->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.5.2</version>
				<configuration>
					<aggregate>true</aggregate>
					<outputDirectory>${cobertura.outputDirectory}/${project.artifactId}</outputDirectory>
				</configuration>
			</plugin>
		</plugins>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh-external</artifactId>
				<version>2.4</version>
			</extension>
		</extensions>
	</build>
	<repositories>
		<repository>
			<id>pavlab</id>
			<name>PavLab</name>
			<url>
				http://www.chibi.ubc.ca/maven2
			</url>
			<layout>default</layout>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
		</repository>
		<repository>
			<id>ibiblio</id>
			<name>ibiblio</name>
			<url>
				http://mirrors.ibiblio.org/pub/mirrors/maven2
			</url>
			<layout>default</layout>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
		</repository>
		<repository>
			<id>central</id>
			<name>central</name>
			<url>http://repo1.maven.org/maven2/</url>
			<layout>default</layout>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
		</repository>
		<repository>
			<id>jboss</id>
			<url>https://repository.jboss.org/nexus/content/repositories/releases</url>
			<layout>default</layout>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
		</repository>
		<repository>
			<id>terracotta-releases</id>
			<url>http://www.terracotta.org/download/reflector/releases</url>
			<layout>default</layout>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>apache.plugin.snapshots</id>
			<name>Apache Development Repository</name>
			<url>http://cvs.apache.org/maven-snapshot-repository</url>
			<layout>default</layout>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
		</pluginRepository>
		<pluginRepository>
			<id>pavlab</id>
			<name>PavLab</name>
			<url>
				http://www.chibi.ubc.ca/maven2
			</url>
			<layout>default</layout>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</releases>
		</pluginRepository>
	</pluginRepositories>
	<profiles>
		<profile>
			<id>assemble-src</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<property>
					<name>assemble-src</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<configuration>
							<descriptors>
								<descriptor>
									src/assembly/src-assembly.xml
								</descriptor>
							</descriptors>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>assemble-bin</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<property>
					<name>assemble-bin</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<configuration>
							<descriptors>
								<descriptor>
									src/assembly/bin-assembly.xml
								</descriptor>
							</descriptors>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<!-- For deployment where host is local (and ssh isn't available for builder, e.g. CI) -->
			<id>local-deploy</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<property>
					<name>deploy.local</name>
				</property>
			</activation>
			<distributionManagement>
				<site>
					<id>localDeploy</id>
					<name>localDeploy</name>
					<url>file:///space/gemmaData/gemma-devsite</url>
				</site>
				<repository>
					<id>repo</id>
					<name>Pavlab</name>
					<url>file:///space/maven2</url>
				</repository>
				<snapshotRepository>
					<id>repo</id>
					<name>Pavlab</name>
					<url>file:///space/maven2</url>
				</snapshotRepository>
			</distributionManagement>
		</profile>
	</profiles>
	<distributionManagement>
		<site>
			<id>website</id>
			<url>
				scpexe://otto.pavlab.chibi.ubc.ca:/space/gemmaData/gemma-devsite
			</url>
		</site>
		<repository>
			<id>repo</id>
			<name>Pavlab</name>
			<url>scpexe://otto.pavlab.chibi.ubc.ca:/space/maven2</url>
		</repository>
		<snapshotRepository>
			<id>repo</id>
			<name>Pavlab</name>
			<url>scpexe://otto.pavlab.chibi.ubc.ca:/space/maven2</url>
		</snapshotRepository>
	</distributionManagement>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.version>3.0.7.RELEASE</spring.version>
		<spring.security.version>3.0.2.RELEASE</spring.security.version>
	</properties>
</project>